Update project: features, tests, UI